--- a/zg/css/landing-page.css
+++ b/zg/css/landing-page.css
@@ -1,4 +1,3 @@
-
 body,
 html {
     width: 100%;
@@ -135,7 +134,6 @@ h6 {
 .banner {
     padding: 100px 0;
     color: #f8f8f8;
-    background: url(../img/banner-bg.jpg) no-repeat center center;
     background-size: cover;
 }
 
@@ -181,7 +179,7 @@ h6 {
 
 footer {
     padding: 50px 0;
-    background-color: #f8f8f8;
+    background-color: #333;
 }
 
 p.copyright {
