--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -9,17 +9,24 @@ body{
     padding: 0;
     margin: 0;
 }
-@font-face{
-    font-family: Ailerons;
-    src: url("Ailerons.otf") format("opentype");
+@font-face {
+    font-family: 'aileronsregular';
+    src: url('ailerons-typeface-webfont.eot');
+    src: url('ailerons-typeface-webfont.eot?#iefix') format('embedded-opentype'),
+         url('ailerons-typeface-webfont.woff2') format('woff2'),
+         url('ailerons-typeface-webfont.woff') format('woff'),
+         url('ailerons-typeface-webfont.ttf') format('truetype'),
+         url('ailerons-typeface-webfont.svg#aileronsregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 }
 .logo{
-    font-family: 'Ailerons', 'Source Sans Pro';
+    font-family: 'aileronsregular', 'Source Sans Pro';
     color: #EDD0AA;
     font-size: 4.5em;
 }
 .head{
-    font-family: 'Ailerons', 'Source Sans Pro';
+    font-family: 'aileronsregular', 'Source Sans Pro';
     font-size: 50px;
 }
 form{
