--- a/css/custom.css
+++ b/css/custom.css
@@ -19,16 +19,19 @@ body {
 .navbar-default .navbar-brand {
 	font-family: 'aileronsregular';
 	font-size: 2em;
-	color: #555;
+	color: #555; /*or rgb(85,85,85)*/
 }
 .navbar li a {
-	/*border-right: 1px solid #333;*/
 	font-size: .9em;
     text-transform: uppercase;
 }
 .jumbotron {
 	background-color: #C28E8E;
 	color: #FFF;
+}
+.jumbotron h1 {
+	margin-left: 0.5em;
+	font-size: 48px;
 }
 .container #about {
 	padding: 20px;
