--- a/css/custom.css
+++ b/css/custom.css
@@ -48,20 +48,52 @@ body {
 }
 .img-circle {
 	border-radius: 50%;
-	max-width: 350px;
-	max-height: 350px;
+	max-width: 300px;
+	max-height: 300px;
 	margin: 0 auto;
 }
+#about {
+	padding-bottom: 50px;
+}
 #bio {
-	background-color: #ddd;
 	padding: 10px;
+	vertical-align: center;
 }
 #portfolio {
 	background-color: rgb(167, 120, 120);
+	padding-bottom: 50px;
+}
+.thumbnail { 
+	position: relative; 
+	overflow: hidden; 
+	cursor: pointer; 
+}
+.thumbnail * {
+ 	transition: all .25s; 
+ }
+.thumbnail h4 { 
+	font-size: 19px; 
+	font-weight: 700; 
+}
+.thumbnail p { 
+	line-height: 24px; 
+}
+.thumbnail:hover h4, .thumbnail:hover p { 
+	color: #AFAFAF; 
+}
+.thumbnail:hover img { 
+	opacity: 0.25; 
+}
+.thumbnail:after { 
+	color: #FFF; 
+}
+#contact{
+	padding-bottom: 100px;
 }
 .footer {
 	background-color: rgb(117, 85, 85);
 	color: rgba(255,255,255,0.8);
 	height: 50px;
 	padding: 20px 20px 50px;
+	text-align: center;
 }
