--- a/css/custom.css
+++ b/css/custom.css
@@ -2,13 +2,12 @@ body {
 	padding-top: 50px;
 }
 @font-face {
-    font-family: 'aileronsregular';
-    src: url('ailerons-typeface-webfont.eot');
-    src: url('ailerons-typeface-webfont.eot?#iefix') format('embedded-opentype'),
-         url('ailerons-typeface-webfont.woff2') format('woff2'),
-         url('ailerons-typeface-webfont.woff') format('woff'),
-         url('ailerons-typeface-webfont.ttf') format('truetype'),
-         url('ailerons-typeface-webfont.svg#aileronsregular') format('svg');
+    font-family: 'geosanslight';
+    src: url('GeosansLight.eot');
+    src: url('GeosansLight.eot?#iefix') format('embedded-opentype'),
+         url('GeosansLight.woff') format('woff'),
+         url('GeosansLight.ttf') format('truetype'),
+         url('GeosansLight.svg') format('svg');
     font-weight: normal;
     font-style: normal;
 }
@@ -17,9 +16,11 @@ body {
 	border: none;
 }
 .navbar-default .navbar-brand {
-	font-family: 'aileronsregular';
+	font-family: 'geosanslight';
 	font-size: 2em;
 	color: #555; /*or rgb(85,85,85)*/
+	text-transform: uppercase;
+	letter-spacing: 3px;
 }
 .navbar li a {
 	font-size: .9em;
@@ -37,8 +38,9 @@ body {
 	padding: 20px;
 }
 .container-fluid h1 {
-	font-family: 'aileronsregular';
+	font-family: 'geosanslight';
 	text-align: center;
+	text-transform: uppercase;
 }
 .container-fluid a {
 	color: #C28E8E;
