--- a/bb/css/custom.css
+++ b/bb/css/custom.css
@@ -1,301 +1,124 @@
-* {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
+*{
+	box-sizing: border-box;
 }
-
-/*
- * -- BASE STYLES --
- * Most of these are inherited from Base, but I want to change a few.
- */
+html{
+	height: 75%;
+}
 body {
-    line-height: 1.7em;
-    color: #7f8c8d;
-    font-size: 13px;
+	height: 100%;
+	padding-top: 50px;
 }
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-label {
-    color: #2B231D;
+.container {
+	height: 100%;
 }
-
-.pure-img-responsive {
-    max-width: 100%;
-    height: auto;
+.navbar {
+	background-color: #2B231D;
+	border: none;
+	color: #fff;
 }
-.pure-menu-selected .pure-menu-link, .pure-menu-selected .pure-menu-link:visited {
-    color: #D7C9B8;
+.navbar-default .navbar-brand {
+	color: #fff;
+	text-transform: uppercase;
 }
-/*
- * -- LAYOUT STYLES --
- * These are some useful classes which I will need
- */
-.l-box {
-    padding: 1em;
+.navbar-default .navbar-nav>li>a {
+    color: #fff;
 }
-
-.l-box-lrg {
-    padding: 2em;
-    border-bottom: 1px solid rgba(0,0,0,0.1);
-}
-
-.is-center {
-    text-align: center;
-}
-
-
-
-/*
- * -- PURE FORM STYLES --
- * Style the form inputs and labels
- */
-.pure-form label {
-    margin: 1em 0 0;
-    font-weight: bold;
-    font-size: 100%;
-}
-
-.pure-form input[type] {
-    border: 2px solid #ddd;
-    box-shadow: none;
-    font-size: 100%;
-    width: 100%;
-    margin-bottom: 1em;
-}
-
-/*
- * -- PURE BUTTON STYLES --
- * I want my pure-button elements to look a little different
- */
-.pure-button {
-    background-color: #1f8dd6;
-    color: white;
-    padding: 0.5em 2em;
-    border-radius: 5px;
-}
-
-a.pure-button-primary {
-    background: white;
-    color: #1f8dd6;
-    border-radius: 5px;
-    font-size: 120%;
-}
-
-
-/*
- * -- MENU STYLES --
- * I want to customize how my .pure-menu looks at the top of the page
- */
-
-.home-menu {
-    padding: 0.5em;
-    text-align: center;
-    box-shadow: 0 1px 1px rgba(0,0,0, 0.10);
-}
-.home-menu {
-    background: #2B231D;
-}
-.pure-menu.pure-menu-fixed {
-    /* Fixed menus normally have a border at the bottom. */
-    border-bottom: none;
-    /* I need a higher z-index here because of the scroll-over effect. */
-    z-index: 4;
-}
-
-.home-menu .pure-menu-heading {
-    color: white;
-    font-weight: 400;
-    font-size: 120%;
-}
-
-.home-menu .pure-menu-selected a {
-    color: white;
-}
-
-.home-menu a {
-    color: #D7C9B8;
-}
-.home-menu li a:hover,
-.home-menu li a:focus {
-    background: none;
-    border: none;
-    color: #FFF;
-}
-
-/*
- * -- SPLASH STYLES --
- * This is the blue top section that appears on the page.
- */
-
-.splash-container {
-    background: #000;
-    background-image: url("../img/breads.jpg");
-    background-size: cover;
-    z-index: 1;
-    overflow: hidden;
-    /* The following styles are required for the "scroll-over" effect */
-    width: 100%;
-    height: 88%;
-    top: 0;
-    left: 0;
-    position: fixed !important;
-}
-
-.splash {
-    /* absolute center .splash within .splash-container */
-    width: 80%;
-    height: 50%;
-    margin: auto;
-    position: absolute;
-    top: 100px; left: 0; bottom: 0; right: 0;
-    text-align: center;
-    text-transform: uppercase;
-}
-
-/* This is the main heading that appears on the blue section surrounded by a box */
-.splash-head {
-    font-size: 20px;
-    font-weight: bold;
-    color: white;
-    padding: 1em 1.6em;
-    font-weight: 100;
-    border-radius: 5px;
-    line-height: 1em;
-}
-
-/* This is the subheading that appears on the blue section */
-.splash-subhead {
-    color: white;
-    letter-spacing: 0.05em;
-    opacity: 0.8;
-}
-
-/*
- * -- CONTENT STYLES --
- * This represents the content area (everything below the blue section)
- */
-.content-wrapper {
-    /* These styles are required for the "scroll-over" effect */
-    position: absolute;
-    top: 87%;
-    width: 100%;
-    min-height: 12%;
-    z-index: 2;
-    background: white;
-
-}
-
-/* This is the class used for the main content headers (<h2>) */
-.content-head {
-    font-weight: 400;
-    text-transform: uppercase;
-    letter-spacing: 0.1em;
-    margin: 2em 0 1em;
-}
-
-/* This is a modifier class used when the content-head is inside a ribbon */
-.content-head-ribbon {
-    color: white;
-}
-
-/* This is the class used for the content sub-headers (<h3>) */
-.content-subhead {
-    color: #6B5747;
-}
-
-/* This is the class used for the dark-background areas. */
-.ribbon {
-    background: #422D2A;
-    color: #aaa;
-}
-.txtright {
-    text-align: right;
-}
-/*Google Maps*/
-    .google-maps {
-        position: relative;
-        padding-bottom: 75%; // This is the aspect ratio
-        height: 0;
-        overflow: hidden;
+@media (min-width: 768px) {
+    .navbar .navbar-nav {
+        display: inline-block;
+        float: none;
+        vertical-align: top;
     }
-    .google-maps iframe {
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100% !important;
-        height: 100% !important;
+    .navbar .navbar-collapse {
+        text-align: center;
     }
-
-/* This is the class used for the footer */
-.footer {
-    background: #2B231D;
 }
-.footer a, a:hover, a:visited{
-    color: #D7C9B8;
+/*Main Banner*/
+#banner {
+	height: 100%;
+	width: 100%;
+	background-image: url("../img/breads.jpg");
+	background-size: cover;
+	background-attachment: fixed;
+	padding-top: 100px;
 }
-
-/*
- * -- TABLET (AND UP) MEDIA QUERIES --
- * On tablets and other medium-sized devices, we want to customize some
- * of the mobile styles.
- */
-@media (min-width: 48em) {
-
-    /* We increase the body font size */
-    body {
-        font-size: 16px;
-    }
-    /* We want to give the content area some more padding */
-    .content {
-        padding: 1em;
-    }
-
-    /* We can align the menu header to the left, but float the
-    menu items to the right. */
-    .home-menu {
-        text-align: left;
-    }
-        .home-menu ul {
-            float: right;
-        }
-
-    /* We increase the height of the splash-container */
-/*    .splash-container {
-        height: 500px;
-    }*/
-
-    /* We decrease the width of the .splash, since we have more width
-    to work with */
-    .splash {
-        width: 50%;
-        height: 50%;
-    }
-
-    .splash-head {
-        font-size: 250%;
-    }
-
-
-    /* We remove the border-separator assigned to .l-box-lrg */
-    .l-box-lrg {
-        border: none;
-    }
-
+#banner h1 {
+	font-size: 5em;
+	color: #FFFCF0;
+	letter-spacing: .06em;
+	text-transform: uppercase;
+	text-align: center;
+	margin-top: 0;
+	text-shadow: 1px 1px #000
 }
-
-/*
- * -- DESKTOP (AND UP) MEDIA QUERIES --
- * On desktops and other large devices, we want to over-ride some
- * of the mobile and tablet styles.
- */
-@media (min-width: 78em) {
-    /* We increase the header font size even more */
-    .splash-head {
-        font-size: 300%;
-    }
+#banner p {
+	color: #FFFCF0;
+	font-weight: 400;
+	font-size: 2em;
+	text-align: center;
+	text-shadow: 1px 1px #000
+}
+/*Main Section*/
+.img-circle{
+	border-radius: 50%;
+}
+.content {
+	color: #fff;
+	text-align: center;
+	background-color: #422D2A;
+	padding-bottom: 20px;	
+}
+.content h1 h2 {
+	color: #fff;
+	text-align: center;
+}
+.content p {
+	font-size: 1.1em;
+	text-align: center;
+	max-width: 75%;
+	display: inline-block;
+	line-height: 1.5em;
+}
+#menu {
+	background-size: cover;
+	background-attachment: fixed;
+	color: #000;
+	text-align: center;
+	padding-bottom: 20px;
+}
+#menu ul {
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+.menuitem {
+	padding-bottom: 20px;
+}
+.thumb {
+	padding-bottom: 20px;
+}
+#loc{
+	color: #000;
+	text-align: center;
+	padding-bottom: 30px;
+}
+#loc ul{
+	list-style: none;
+	margin: 0;
+	padding: 0;
+}
+#yelpwidget {
+	margin: 0 auto;
+	text-align: center;
+}
+.centerBlock {
+    display: table;
+    margin: 0 auto;
+}
+/*Footer*/
+#footer {
+	background-color: #2B231D;
+	color: #fff;
+	text-align: center;
+	padding: 50px 0;
 }
