--- a/css/custom.css
+++ b/css/custom.css
@@ -1,22 +1,12 @@
 body {
 	padding-top: 50px;
 }
-@font-face {
-    font-family: 'geosanslight';
-    src: url('GeosansLight.eot');
-    src: url('GeosansLight.eot?#iefix') format('embedded-opentype'),
-         url('GeosansLight.woff') format('woff'),
-         url('GeosansLight.ttf') format('truetype'),
-         url('GeosansLight.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
 .navbar-default {
 	background-color: rgba(255,255,255,0.95);
 	border: none;
 }
 .navbar-default .navbar-brand {
-	font-family: 'geosanslight';
+	font-family: 'Poiret One', cursive;
 	font-size: 2em;
 	color: #555; /*or rgb(85,85,85)*/
 	text-transform: uppercase;
@@ -25,6 +15,7 @@ body {
 .navbar li a {
 	font-size: .9em;
     text-transform: uppercase;
+    letter-spacing: 1px;
 }
 .jumbotron {
 	background-color: #C28E8E;
@@ -38,7 +29,7 @@ body {
 	padding: 20px;
 }
 .container-fluid h1 {
-	font-family: 'geosanslight';
+	font-family: 'Poiret One', cursive;
 	text-align: center;
 	text-transform: uppercase;
 }
