--- a/css/custom.css
+++ b/css/custom.css
@@ -35,6 +35,7 @@ body {
 	font-family: 'Palanquin', cursive;
 	text-align: center;
 	text-transform: uppercase;
+	margin-bottom: 1em;
 }
 .container-fluid a {
 	color: #C28E8E;
@@ -56,7 +57,7 @@ body {
 	vertical-align: center;
 }
 #portfolio {
-	background-color: rgb(167, 120, 120);
+	background-color: rgba(216, 169, 172, 0.75);
 	padding-bottom: 50px;
 }
 .thumbnail { 
@@ -87,7 +88,7 @@ body {
 	padding-bottom: 100px;
 }
 .footer {
-	background-color: rgb(117, 85, 85);
+	background-color: #7F3338;
 	color: rgba(255,255,255,0.8);
 	height: 50px;
 	padding: 20px 20px 50px;
