--- a/bb/css/custom.css
+++ b/bb/css/custom.css
@@ -7,6 +7,7 @@ html{
 body {
 	height: 100%;
 	padding-top: 50px;
+	font-family: 'Quattrocento Sans', sans-serif;
 }
 .container {
 	height: 100%;
@@ -23,6 +24,7 @@ body {
 
 .navbar-default .navbar-nav > li > a {
     color: #fff;
+    text-transform: uppercase;
 }
 .navbar-default .navbar-nav > li > a:hover,
 .navbar-default .navbar-nav > li > a:focus {
@@ -70,6 +72,9 @@ body {
 	border-radius: 50%;
 	height: 250px;
 	width: 250px;
+}
+.bio {
+	margin-top: 2em;
 }
 .content {
 	color: #fff;
