--- a/css/custom.css
+++ b/css/custom.css
@@ -1,5 +1,6 @@
 body {
 	padding-top: 50px;
+	font-family: "Open Sans", sans-serif;
 }
 .navbar-default {
 	background-color: rgba(255,255,255,0.95);
