--- a/css/custom.css
+++ b/css/custom.css
@@ -1,6 +1,9 @@
 body {
 	padding-top: 50px;
-	font-family: "Open Sans", sans-serif;
+	font-family: 'Open Sans', sans-serif;
+}
+.process-cont {
+	max-width:80%;
 }
 .navbar-default {
 	background-color: rgba(255,255,255,0.95);
@@ -23,7 +26,7 @@ body {
 	color: #FFF;
 	background-image: url('../img/pink-fleurs.jpg');
     background-size: cover;
-    height: 150px;
+    height: 90px;
 }
 .jumbotron h1 {
 	margin-left: 0.5em;
@@ -66,6 +69,9 @@ body {
 	position: relative; 
 	overflow: hidden; 
 	cursor: pointer; 
+	background-color: rgba(0,0,0,0);
+	border: none;
+	border-radius: 0px;
 }
 .thumbnail * {
  	transition: all .25s; 
@@ -77,16 +83,30 @@ body {
 .thumbnail p { 
 	line-height: 24px; 
 }
+.thumbnail:hover {
+	background-color: #333;
+}
 .thumbnail:hover h4, .thumbnail:hover p { 
-	color: #AFAFAF; 
+	color: #FFF;
 }
 .thumbnail:hover img { 
-	opacity: 0.25; 
+	opacity: 0.5; 
 }
 .thumbnail:after { 
 	color: #FFF; 
 }
+.caption {
+	font-family: 'Palanquin', sans-serif;
+	text-align: center;
+}
+.caption h4 {
+	text-transform: uppercase;
+}
+.caption p {
+	font-style: italic;
+}
 #contact{
+	max-width: 80%;
 	padding-bottom: 100px;
 }
 .footer {
