--- a/css/custom.css
+++ b/css/custom.css
@@ -34,6 +34,9 @@ body {
 	font-size: 48px;
 	text-align: center;
 }
+.process-cont .img-responsive {
+	margin: 0 auto;
+}
 .container-fluid #about {
 	padding: 20px;
 }
@@ -118,9 +121,20 @@ body {
 	max-width: 80%;
 	padding-bottom: 100px;
 }
-.wrapper {
+.icon_center {
+	text-align: center;
 	margin: 0 auto;
-	width: 25%;
+}
+.icon_center i {
+	margin: 0 5px;
+}
+.socmedia {
+	text-align: center;
+	color: #7F3338;
+}
+.socmedia:hover {
+	color: rgba(216, 169, 172, 0.75);
+	transition: all 0.3s ease-out;
 }
 .footer {
 	background-color: #7F3338;
