--- a/css/custom.css
+++ b/css/custom.css
@@ -21,7 +21,7 @@ body {
     letter-spacing: 1px;
 }
 .jumbotron {
-	background-color: #d1d7e7;
+	background-color: #D1D7E7;
 	background-image: url('../img/bg7.jpeg');
 	background-size: cover;
 	color: #FFF;
@@ -159,6 +159,9 @@ body {
 }
 .mid {
 	text-align: center;
+}
+.resume {
+	font-size: 1.4em;
 }
 .footer {
 	background-color: #E0DEEB;
