--- a/css/custom.css
+++ b/css/custom.css
@@ -84,7 +84,7 @@ body {
 	position: relative; 
 	overflow: hidden; 
 	cursor: pointer; 
-	background-color: rgba(0,0,0,0);
+	background-color: #c1bdc2;
 	border: none;
 	border-radius: 0px;
 }
